-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: None
-
Component/s: hotspot
-
b105
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8147587 | 8u102 | Zoltan Majo | P4 | Closed | Not an Issue |
In the WB API implementation, the codeBlob2objectArray method can throw exceptions. However, in the WB_GetCodeHeapEntries and WB_GetNMethod methods the exception status is not checked after returning from codeBlob2objectArray. As both WB_GetCodeHeapEntries and WB_GetNMethod can throw exceptions on their own, the exceptions thrown by codeBlob2objectArray are possibly overwritten and stay unnoticed.
- backported by
-
JDK-8147587 Unchecked pending exceptions in the WhiteBox API's implementation
-
- Closed
-
- duplicates
-
JDK-8147587 Unchecked pending exceptions in the WhiteBox API's implementation
-
- Closed
-