8147441: Unchecked pending exceptions in the WhiteBox API's implementation

Add checks for pending exceptions.

Reviewed-by: kvn